fixed sizing on mobile for added weight class

--- a/src/components/Rankings/Rankings.css
+++ b/src/components/Rankings/Rankings.css
@@ -49,7 +49,7 @@
 }
 
 .rankings-super-right, .rankings-super-left{
-    display: flex;
+    
     width: 33%;
     height: auto;
 }
@@ -208,6 +208,11 @@
         width: 45%;
         height: auto;
     }
+
+    .rankings-220-right, .rankings-220-left{
+        width: 45%;
+        height: auto;
+    }
     
     .rankings-light-right, .rankings-light-left {
         width: 45%;
@@ -276,6 +281,11 @@
     }
     
     .rankings-heavy-right, .rankings-heavy-left {
+        width: 100%;
+        height: auto;
+    }
+
+    .rankings-220-right, .rankings-220-left{
         width: 100%;
         height: auto;
     }
